--- a/src/signin.html
+++ b/src/signin.html
@@ -1,32 +1,32 @@
 <!doctype html>
 
-<html lang="en">
+<html lang='en'>
 <head>
-  	<meta charset="utf-8">
-	<link href="css/styles.css" type="text/css" rel="stylesheet"/>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-  	<title> Focus </title>
+  	<meta charset='utf-8'>
+    <link href='css/styles.css' type='text/css' rel='stylesheet'/>
+	<link href='css/signin.css' type='text/css' rel='stylesheet'/>
+	<script src='https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js'></script>
+    <script src='js/signin.js' type='text/javascript'></script>
+  	<title> Focus - Iniciar Sesión</title>
 </head>
 
 <body>
-	<div id="content">
-	    <div id="header">
+	<div id='content'>
+	    <div id='header'>
 	    	<div>
-	    		<img src="img/focus_logo.png"/>
+	    		<img src='img/focus_logo.png'/>
 	    	</div>
 	    </div>
-	    <div id="loginForm">
+	    <div id='loginForm'>
 	    	<h1> Login </h1>
-	    	<form id="formLogin">
-			  	<label> Username: </label>
-			  	<br>
-			 		<input type="text" name="Username" placeholder="Username" id="username">
-			 	<br>
-		 		<label> Password: </label><br>
-			  		<input type="password" name="Password" placeholder="***************" id="password">
-			  	<br>
-			  		<input type="button" id="loginButton" value="Login" />
-
+	    	<form id='formLogin'>
+                <div className='input-wrapper'>
+                    <label> Username: </label>
+			 		<input type='text' name='Username' placeholder='Username' id='username' required />
+                <div className='input-wrapper'>
+		 		    <label> Password: </label>
+			  		<input type='password' name='Password' placeholder='***************' id='password'>
+                <button type='submit' className='login'>Iniciar Sesión</button>
 			</form>
 	    </div>
 	    <div>
