--- a/src/signin.html
+++ b/src/signin.html
@@ -20,21 +20,24 @@
 	    <div id='loginForm'>
 	    	<h1> Login </h1>
 	    	<form id='formLogin'>
-                <div className='input-wrapper'>
-                    <label> Username: </label>
+                <div class='input-wrapper'>
+                    <label> Username: </label><br/>
 			 		<input type='text' name='Username' placeholder='Username' id='username' required />
-                <div className='input-wrapper'>
-		 		    <label> Password: </label>
+		 		</div>
+		 		<br/>	
+                <div class='input-wrapper'>
+		 		    <label> Password: </label><br/>
 			  		<input type='password' name='Password' placeholder='***************' id='password'>
-                <button type='submit' className='login' id='loginButton'>Iniciar Sesión</button>
+		  		</div>
+		  		<div>
+                	<button type='submit' className='login' id='loginButton'>Iniciar Sesión</button>
+            	</div>
                 <div id='feedback'></div>
 			</form>
 	    </div>
-	    <div>
-	    	<footer>
-	    		<p>Copyright © 2016 Focus Consulting Group, SA. de C.V.</p>
-	    	</footer>
-	    </div>
+    	<footer>
+    		<p>Copyright © 2016 Focus Consulting Group, SA. de C.V.</p>
+    	</footer>
    	</div>
 </body>
 </html>
